[gd_scene load_steps=37 format=3 uid="uid://5uj3n0s8lrfc"]

[ext_resource type="Script" path="res://node.gd" id="1_2jdkj"]
[ext_resource type="SpriteFrames" uid="uid://cgc4baeu26pvp" path="res://Bard.gif" id="2_4a67k"]
[ext_resource type="FontFile" uid="uid://defsafq4ifxdd" path="res://fonticon.ttf" id="2_4pmkb"]
[ext_resource type="FontFile" uid="uid://cfpggsjysbp6h" path="res://Hack-Regular.ttf" id="2_kwno2"]
[ext_resource type="Theme" uid="uid://bmh4r2y8ved21" path="res://eq.theme" id="3_x8kth"]
[ext_resource type="SpriteFrames" uid="uid://qw2t6vl17ufg" path="res://Beastlord.gif" id="5_cgm3w"]
[ext_resource type="Texture2D" uid="uid://7iy40oylu3h1" path="res://bag.png" id="5_yufr3"]
[ext_resource type="SpriteFrames" uid="uid://ck8mhn8uvq0qn" path="res://Berserker.gif" id="6_e54jc"]
[ext_resource type="SpriteFrames" uid="uid://cy5x48svx3axt" path="res://Cleric.gif" id="7_ve67m"]
[ext_resource type="SpriteFrames" uid="uid://brn5dchjhaayy" path="res://Druid.gif" id="8_1cv22"]
[ext_resource type="SpriteFrames" uid="uid://cvbnph82f0umc" path="res://Enchanter.gif" id="9_o4e3p"]
[ext_resource type="SpriteFrames" uid="uid://eo8s8rogvhrc" path="res://Magician.gif" id="10_adljb"]
[ext_resource type="SpriteFrames" uid="uid://lgp534va8j78" path="res://Monk.gif" id="11_wxbe8"]
[ext_resource type="SpriteFrames" uid="uid://da325srg0uaqu" path="res://Necromancer.gif" id="12_r18nd"]
[ext_resource type="SpriteFrames" uid="uid://cn7gygehlbet7" path="res://Paladin.gif" id="13_lfdyh"]
[ext_resource type="SpriteFrames" uid="uid://b8jdlx8anyy7a" path="res://Ranger.gif" id="14_srrp1"]
[ext_resource type="SpriteFrames" uid="uid://bqm4e1gc3517y" path="res://Rogue.gif" id="15_woyhe"]
[ext_resource type="SpriteFrames" uid="uid://clv7yk5snyfeg" path="res://Shadowknight.gif" id="16_ru4fs"]
[ext_resource type="SpriteFrames" uid="uid://bik460sf50ont" path="res://Shaman.gif" id="17_rxgj3"]
[ext_resource type="SpriteFrames" uid="uid://b2giqflkcsnq7" path="res://Warrior.gif" id="18_set3d"]
[ext_resource type="SpriteFrames" uid="uid://b0l0g2svnud5" path="res://Wizard.gif" id="19_5f7v0"]
[ext_resource type="FontFile" uid="uid://cotd6bycfkg73" path="res://Hack-Bold.ttf" id="21_1u0a3"]
[ext_resource type="Texture2D" uid="uid://cd2vfnmg7paxv" path="res://Logo.png" id="22_b43nj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ue8i"]
bg_color = Color(0.111197, 0.111197, 0.111197, 1)
border_color = Color(0, 0, 0, 1)
corner_detail = 1
shadow_size = 3
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lwqj2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qnrer"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b65cu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wiore"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8jepl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_61rai"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wjsf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j5g33"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cja6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dwem2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ohxn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjsgq"]
content_margin_left = 6.0
content_margin_top = 4.0
content_margin_right = 5.0
content_margin_bottom = 4.0
bg_color = Color(0.111197, 0.111197, 0.111197, 1)

[node name="Node" type="Node"]
script = ExtResource("1_2jdkj")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialogGameDir" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
borderless = true
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 48

[node name="ItemListFiles" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_kwno2")
allow_reselect = true
item_count = 5
item_0/text = "nothing found"
item_0/selectable = false
item_2/text = "Use the command:"
item_3/text = "/output spellbook"
item_4/text = "in-game, then hit refresh^"

[node name="ItemListSpells" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(460, 420)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_x8kth")
theme_override_constants/v_separation = 3
theme_override_constants/h_separation = 10
theme_override_fonts/font = ExtResource("2_kwno2")
max_columns = 2

[node name="ItemListInventory" type="ItemList" parent="MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("3_x8kth")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonBard" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Bard"

[node name="ButtonBeastlord" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Beastlord"

[node name="ButtonBerserker" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Berserker"

[node name="ButtonCleric" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Cleric"

[node name="ButtonDruid" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Druid"

[node name="ButtonEnchanter" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Enchanter"

[node name="ButtonMagician" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Magician"

[node name="ButtonMonk" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Monk"

[node name="ButtonNecromancer" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Necromancer"

[node name="ButtonPaladin" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Paladin"

[node name="ButtonRanger" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Ranger"

[node name="ButtonRogue" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Rogue
"

[node name="ButtonShadowknight" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Shadowknight
"

[node name="ButtonShaman" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Shaman
"

[node name="ButtonWarrior" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Warrior"

[node name="ButtonWizard" type="Button" parent="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(110, 32)
layout_mode = 2
text = "Wizard
"

[node name="ItemList" type="ItemList" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_kwno2")
select_mode = 1

[node name="ButtonUpdate" type="Button" parent="."]
offset_left = 46.0
offset_right = 206.0
offset_bottom = 48.0
tooltip_text = "Refresh character list"
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_4pmkb")
theme_override_font_sizes/font_size = 24
text = ""

[node name="ButtonInfo" type="Button" parent="."]
offset_right = 44.0
offset_bottom = 48.0
tooltip_text = "Open settings"
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_4pmkb")
theme_override_font_sizes/font_size = 24
text = ""

[node name="ButtonBag" type="Button" parent="."]
visible = false
offset_left = 208.0
offset_right = 252.0
offset_bottom = 48.0
tooltip_text = "Remove spells from inventory"
theme = ExtResource("3_x8kth")
icon = ExtResource("5_yufr3")
icon_alignment = 1

[node name="MenuButtonExp" type="MenuButton" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 283.0
offset_top = 136.0
offset_right = 435.0
offset_bottom = 169.0
theme = ExtResource("3_x8kth")
text = "Expansion"
flat = false

[node name="Bard" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358, 81)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("2_4a67k")
animation = &"gif"
autoplay = "gif"

[node name="Beastlord" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("5_cgm3w")
animation = &"gif"
autoplay = "gif"

[node name="Berserker" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("6_e54jc")
animation = &"gif"
autoplay = "gif"

[node name="Cleric" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("7_ve67m")
animation = &"gif"
autoplay = "gif"

[node name="Druid" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("8_1cv22")
animation = &"gif"
autoplay = "gif"

[node name="Enchanter" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("9_o4e3p")
animation = &"gif"
autoplay = "gif"

[node name="Magician" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("10_adljb")
animation = &"gif"
autoplay = "gif"

[node name="Monk" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("11_wxbe8")
animation = &"gif"
autoplay = "gif"

[node name="Necromancer" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("12_r18nd")
animation = &"gif"
autoplay = "gif"

[node name="Paladin" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("13_lfdyh")
animation = &"gif"
autoplay = "gif"

[node name="Ranger" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("14_srrp1")
animation = &"gif"
autoplay = "gif"

[node name="Rogue" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("15_woyhe")
animation = &"gif"
autoplay = "gif"

[node name="Shadowknight" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("16_ru4fs")
animation = &"gif"
autoplay = "gif"

[node name="Shaman" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("17_rxgj3")
animation = &"gif"
autoplay = "gif"

[node name="Warrior" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("18_set3d")
animation = &"gif"
autoplay = "gif"

[node name="Wizard" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(358.6, 81.2)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("19_5f7v0")
animation = &"gif"
autoplay = "gif"

[node name="LabelClass" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 33)
offset_left = 253.0
offset_top = 1.0
offset_right = 463.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0.980392, 0.741176, 0.184314, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_1u0a3")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelExp" type="Label" parent="."]
unique_name_in_owner = true
visible = false
clip_contents = true
offset_left = 256.0
offset_top = 174.0
offset_right = 459.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_1u0a3")
theme_override_font_sizes/font_size = 16
text = "All"
horizontal_alignment = 1
autowrap_mode = 3

[node name="LabelSpells" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
offset_left = 257.0
offset_top = 233.0
offset_right = 357.0
offset_bottom = 256.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.980392, 0.741176, 0.184314, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
offset_left = 256.0
offset_top = 253.0
offset_right = 356.0
offset_bottom = 276.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
text = "Scribed"
horizontal_alignment = 1

[node name="LabelMissing" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
offset_left = 357.0
offset_top = 233.0
offset_right = 457.0
offset_bottom = 256.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.984314, 0.286275, 0.203922, 1)
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
offset_left = 359.0
offset_top = 253.0
offset_right = 459.0
offset_bottom = 276.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
text = "Missing"
horizontal_alignment = 1

[node name="PopupPanel" type="PopupPanel" parent="."]
unique_name_in_owner = true
title = "settings"
initial_position = 2
size = Vector2i(1080, 700)
min_size = Vector2i(640, 700)
max_size = Vector2i(1080, 700)
theme_override_styles/panel = SubResource("StyleBoxFlat_7ue8i")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 14
alignment = 1

[node name="Label" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 111)
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonCloud" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_4pmkb")
theme_override_font_sizes/font_size = 24
text = ""

[node name="LabelCloud" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_font_sizes/font_size = 14
text = "Check for updates"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelEQDir" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Set EverQuest directory:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ButtonSetGameDir" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme = ExtResource("3_x8kth")
theme_override_fonts/font = ExtResource("2_4pmkb")
theme_override_font_sizes/font_size = 24
text = ""

[node name="LabelGameDir" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_kwno2")
text = "<-- Please set a directory"
vertical_alignment = 1
autowrap_mode = 3

[node name="CheckButtonExp" type="CheckButton" parent="PopupPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_x8kth")
theme_override_colors/font_pressed_color = Color(0.980392, 0.741176, 0.184314, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("2_kwno2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lwqj2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_qnrer")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b65cu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wiore")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_8jepl")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_61rai")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6wjsf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_j5g33")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cja6r")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_dwem2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1ohxn")
text = "Save Expansion"

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label5" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 10)
layout_mode = 2

[node name="Label2" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.407843, 0.490196, 0.415686, 1)
theme_override_font_sizes/font_size = 30
text = "Quick guide"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_font_sizes/font_size = 14
text = "To export your spellbook
 use in-game command:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.741176, 0.184314, 1)
theme_override_font_sizes/font_size = 16
text = "/output spellbook"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.858824, 0.698039, 1)
theme_override_font_sizes/font_size = 14
text = "To export your inventory
 use in-game command:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="PopupPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.980392, 0.741176, 0.184314, 1)
theme_override_font_sizes/font_size = 16
text = "/output inventory"
horizontal_alignment = 1

[node name="ButtonCloseCfg" type="Button" parent="PopupPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme = ExtResource("3_x8kth")
text = "Close"

[node name="Logo" type="Sprite2D" parent="PopupPanel"]
position = Vector2(520, 80)
texture = ExtResource("22_b43nj")

[node name="LabelV" type="Label" parent="PopupPanel"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1080.0
offset_bottom = 700.0
grow_horizontal = 0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.407843, 0.490196, 0.415686, 1)
theme_override_fonts/font = ExtResource("2_kwno2")
theme_override_font_sizes/font_size = 15
text = "update"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LabelPop" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -58.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.407843, 0.490196, 0.415686, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("21_1u0a3")
theme_override_styles/normal = SubResource("StyleBoxFlat_yjsgq")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="dir_selected" from="FileDialogGameDir" to="." method="_on_file_dialog_game_dir_dir_selected"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/MarginContainer/ItemListFiles" to="." method="_on_item_list_files_item_selected"]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/VBoxContainer/ItemListSpells" to="." method="_on_item_list_spells_item_activated"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonBeastlord" to="." method="_on_button_beastlord_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonBerserker" to="." method="_on_button_berserker_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonCleric" to="." method="_on_button_cleric_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonEnchanter" to="." method="_on_button_enchanter_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonMagician" to="." method="_on_button_magician_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonMonk" to="." method="_on_button_monk_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonPaladin" to="." method="_on_button_paladin_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonRanger" to="." method="_on_button_ranger_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonRogue" to="." method="_on_button_rogue_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonShadowknight" to="." method="_on_button_shadowknight_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonShaman" to="." method="_on_button_shaman_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonWarrior" to="." method="_on_button_warrior_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/MarginContainer/Panel/VBoxContainer/ButtonWizard" to="." method="_on_button_wizard_pressed"]
[connection signal="item_activated" from="MarginContainer/HBoxContainer/MarginContainer/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="pressed" from="ButtonUpdate" to="." method="_on_button_update_pressed"]
[connection signal="pressed" from="ButtonInfo" to="." method="_on_button_info_pressed"]
[connection signal="pressed" from="ButtonBag" to="." method="_on_button_bag_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer3/ButtonCloud" to="." method="_on_button_cloud_pressed"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/HBoxContainer/ButtonSetGameDir" to="." method="_on_button_set_game_dir_pressed"]
[connection signal="toggled" from="PopupPanel/MarginContainer/VBoxContainer/CheckButtonExp" to="." method="_on_check_button_exp_toggled"]
[connection signal="pressed" from="PopupPanel/MarginContainer/VBoxContainer/ButtonCloseCfg" to="." method="_on_button_close_cfg_pressed"]
